@@ -92,6 +92,7 @@ Improvements:
     * edje entry : Remove ecore_imf_context_cursor_position_set in functions related to selection.
     * Translations updates:
      - french.
+    * edje entry : Support &, < and > in preedit string
 
 Fixes:
     * Fix a memory leak in ecore_con_dns when using ecore_con_server_connect
